test/data/codegen/valid/many_col_one_row/queries.cypher
// name: PersonById :one
MATCH (p:Person) WHERE p.id = $id RETURN p.name, p.age
