test/data/codegen/invalid/duplicate_source_file/b/queries.cypher
// name: AnotherQuery :one
MATCH (p:Person) WHERE p.id = $id RETURN p
